# ModernPython

./: .flake8  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: release-drafter.yaml
.github/workflows/: coverage.yaml  tests.yaml
docs/: conf.py  index.rst  reference.rst
src/modern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
