[tool.poetry]
name = "modern_python"
version = "0.1.0"
description = "Python template with modern tooling"
authors = ["Chad Hattabaugh <Chad.Hattabaugh@GMail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[tool.poetry.scripts]
modern-python="modern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
