[tool.poetry]
name = "modern_python"
version = "0.1.0"
description = "Python template with modern tooling"
authors = ["Chad Hattabaugh <Chad.Hattabaugh@GMail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
desert = "^2020.11.18"
marshmallow = "^3.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
flake8 = "^3.9.1"
black = "^21.4b2"
isort = "^5.8.0"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.812"
pytype = {version = "^2021.4.26", python = "3.8.9"}
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.4"
Sphinx = "^3.5.4"
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
